cc-manifests-central/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: happy-web-app-deployment
  labels:
    app: happy-web-app
spec:
  selector:
    matchLabels:
      app: happy-web-app
  replicas: 1
  template:
    metadata:
      labels:
        app: happy-web-app
    spec:
      containers:
      - name: happy-web-app
        image: syahdaromstudenttelu/happy-web
        resources:
          requests:
            cpu: 20m
            memory: 25Mi
          limits:
            cpu: 50m
            memory: 50Mi
        ports:
        - containerPort: 3000
      restartPolicy: Always
